# scalping_bot

./: .gitignore
C#_frontend/CryptoApp/: CryptoApp.sln
C#_frontend/CryptoApp/CryptoApp/: Program.cs  _Imports.razor  bot_data_log_20250701_013016.txt  bot_data_log_20250701_013039.txt  bot_data_log_20250703_011021.txt  bot_data_log_20250703_023022.txt  console_log_20250703_010034123.txt  console_log_20250703_011017259.txt  console_log_20250703_022931007.txt  debug_log_20250703_010034130.txt  debug_log_20250703_011017267.txt  debug_log_20250703_022931018.txt
C#_frontend/CryptoApp/CryptoApp/Data/: WeatherForecast.cs  WeatherForecastService.cs
Go_rest_server/auth_service/: .env  go.mod  go.sum  main.go
Go_rest_server/auth_service/controllers/: usersController.go
Go_rest_server/auth_service/initializers/: connectToDb.go  syncDatabase.go
Go_rest_server/auth_service/middleware/: requireAuth.go
Go_rest_server/auth_service/models/: userModel.go
Go_rest_server/bot_core/: DOC.txt
Go_rest_server/bot_core/rustService/: Cargo.toml  build.rs
Go_rest_server/bot_core/rustService/proto/: proto.proto
Go_rest_server/bot_core/rustService/src/: client.rs  core.rs  core_manager.rs  lib.rs  server.rs
Go_rest_server/bot_service/: go.mod  main.go
Go_rest_server/bot_service/Requests/: Get.go  Model.go  Patch.go  Post.go
Go_rest_server/bot_service/bot/: config.go  contorl.go  coreBot.go  info.go  model.go
Rust_backend/rust_binance_text/: Cargo.toml  FFI.docx  prevBot.txt
Rust_backend/rust_binance_text/src/: lib.rs  main_bot.rs
(+10 files in other folders)
