[package]
name = "rust_binance_text"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
binance = "0.21.0"
once_cell = "1.19.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3.31"
crossbeam-channel = "0.5"
libc = "0.2"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
panic = "abort"