[package]
name = "rustService"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.11"
tokio = { version = "1.37", features = ["full"] }
prost = "0.12.4"
binance = "0.21.0"
once_cell = "1.19.0"
tokio-tungstenite = "0.20"
futures-util = "0.3.31"
crossbeam-channel = "0.5"
libc = "0.2"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio-stream = "0.1.17"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"
